firefox popup scrollbar fix

--- a/src/pages/Popup/index.css
+++ b/src/pages/Popup/index.css
@@ -11,35 +11,38 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-ul::-webkit-scrollbar {
+ul::-webkit-scrollbar { /* Chrome */
   width: 6px;
+}
+
+ul { /* Firefox */
   scrollbar-width: thin;
 }
 
 
-ul.DarkMode {
-    scrollbar-color: rgba(250, 250, 250, 0.27) #424242;
+ul.DarkMode { /* Firefox */
+  scrollbar-color: rgba(250, 250, 250, 0.27) #424242;
 }
 
-ul.DarkMode::-webkit-scrollbar-track {
+ul.DarkMode::-webkit-scrollbar-track { /* Chrome */
   background-color: #424242;
 }
 
-ul.DarkMode::-webkit-scrollbar-thumb {
+ul.DarkMode::-webkit-scrollbar-thumb { /* Chrome */
   border-radius: 3px;
   background-color: rgba(250, 250, 250, 0.27);
 }
 
 
-ul.BrightMode {
-    scrollbar-color: rgba(0, 0, 0, 0.27) #fff;
+ul.BrightMode { /* Firefox */
+  scrollbar-color: rgba(0, 0, 0, 0.27) #fff;
 }
 
-ul.BrightMode::-webkit-scrollbar-track {
+ul.BrightMode::-webkit-scrollbar-track { /* Chrome */
   background-color: #fff;
 }
 
-ul.BrightMode::-webkit-scrollbar-thumb {
+ul.BrightMode::-webkit-scrollbar-thumb { /* Chrome */
   border-radius: 3px;
   background-color: rgba(0, 0, 0, 0.27);
 }
